jumping to quick fix

--- a/client/src/components/MemberProfilePage/MemberProfilePage.css
+++ b/client/src/components/MemberProfilePage/MemberProfilePage.css
@@ -9,3 +9,21 @@
   height: 28vh;
   background-color: var(--pink)
 }
+
+.MemberProfilePage .left {
+  width: 60vw;
+
+}
+
+.MemberProfilePage .interaction-div {
+  width: 30%;
+}
+
+.MemberProfilePage .right {}
+
+.page {
+  display: flex;
+  /* flex-wrap: wrap; */
+  max-width: 100vw;
+
+}
